# polygon_market_data

./: .gitignore  __main__.py  pyproject.toml
sql/: attention_score.sql  attention_score_enhanced.sql  coiled_spring.sql  enriched_stealth_accumulation_watchlist.sql  financedatabase_details.sql  high_relative_volume_and_high_atr.sql  sector_heatmap.sql  zero_line_crossover.sql
src/market_data/: __main__.py  database.py  fetcher.py  indicators.py
src/market_data/sql/: calculate_atr.sql  calculate_indicators.sql  init_schema.sql
training/: feature_importance_analyzer.py  xgboost_trading_model.py
